# lurk

./: Cargo.toml
benches/: fib.rs  lcs.rs  sum.rs
examples/byte_lookup/: Cargo.toml
examples/byte_lookup/src/: main.rs  memoset.rs
src/air/: builder.rs  debug.rs
src/core/: big_num.rs  chipset.rs  compile.rs  eval_compiled.rs  eval_direct.rs  stark_machine.rs  u64.rs  zstore.rs
src/core/cli/: comm_data.rs  lurk_data.rs  meta.rs  microchain.rs  proofs.rs  repl.rs  zdag.rs
src/core/tests/: eval_compiled.rs  eval_direct.rs  eval_ocaml.rs  lang_compiled.rs  lang_direct.rs  mod.rs
src/gadgets/big_num/: cmp.rs
src/gadgets/bytes/: trace.rs
src/gadgets/unsigned/: add.rs  cmp.rs  div_rem.rs  field.rs  is_zero.rs  less_than.rs  mod.rs  mul.rs
src/lair/: air.rs  bytecode.rs  chipset.rs  execute.rs  func_chip.rs  lair_chip.rs  memory.rs  mod.rs  toplevel.rs  trace.rs
src/ocaml/: compile.rs
src/poseidon/: air.rs  columns.rs  config.rs
src/poseidon/wide/: columns.rs  mod.rs
tests/: fib.rs
