[package]
name = "lurk"
version = "0.5.0"
edition.workspace = true
repository.workspace = true

[[bin]]
name = "lurk"
path = "src/main.rs"

[workspace.package]
authors = ["Argument Engineering <engineering@argument.xyz>"]
edition = "2021"
repository = "https://github.com/argumentcomputer/lurk"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rayon = "1.10.0"
itertools = "0.13.0"
p3-air = "0.1.4-succinct"
p3-field = "0.1.4-succinct"
p3-commit = "0.1.4-succinct"
p3-matrix = "0.1.4-succinct"
p3-baby-bear = { version = "0.1.4-succinct", features = ["nightly-features"] }
p3-util = "0.1.4-succinct"
p3-challenger = "0.1.4-succinct"
p3-mds = "0.1.4-succinct"
p3-poseidon2 = "0.1.4-succinct"
p3-symmetric = "0.1.4-succinct"
p3-uni-stark = "0.1.4-succinct"
p3-maybe-rayon = "0.1.4-succinct"
sp1-core-machine = "3.4.0"
sp1-core-executor = "3.4.0"
sp1-derive = "3.4.0"
sp1-stark = "3.4.0"
sp1-sdk = "3.4.0"
anyhow = "1.0.72"
ascent = { git = "https://github.com/argumentcomputer/ascent.git" }
arc-swap = "1.7.1"
base-x = "0.2.11"
bincode = "1"
camino = "1.1"
clap = "4.5.15"
criterion = "0.5"
either = "1"
expect-test = "1.4.1"
home = "0.5"
indexmap = "2.2.6"
match_opt = "0.1.2"
nom = "7.1.3"
nom_locate = "4.1.0"
num-bigint = "0.4.3"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.18.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
ratatui = "0.28.1"
rustc-hash = "2.0.0"
rustyline = "14.0"
rustyline-derive = "0.10"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.13.0"
thiserror = "1.0.44"
hybrid-array = "0.2.0-rc"
lazy_static = "1.4.0"
hashbrown = "0.14.5"
rand_chacha = "0.3.1"
proptest = "1.5.0"

loam-macros = { version = "0.1.0", path = "loam-macros" }
derive-syn-parse = "0.2.0"
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0.57"

[dependencies]
anyhow = { workspace = true }
ascent = { workspace = true }
arc-swap = { workspace = true }
base-x = { workspace = true }
bincode = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
expect-test = { workspace = true }
either = { workspace = true }
home = { workspace = true }
hybrid-array = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
lazy_static = { workspace = true }
match_opt = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_xoshiro = { workspace = true }
ratatui = { workspace = true }
rustc-hash = { workspace = true }
rustyline = { workspace = true, features = ["derive"] }
rustyline-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-mds = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-derive = { workspace = true }
sp1-stark = { workspace = true }
sp1-sdk = { workspace = true }
hashbrown = { workspace = true }

loam-macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "lcs"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "lurk"
harness = false

[workspace]
members = ["loam-macros", "examples/byte_lookup"]

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 16

[features]
default=[]
loam=[]


# Ascent will be compiled with -Copt-level=3 . This includes build dependencies.
[profile.dev.package."ascent"]
opt-level = 3

[patch.crates-io]
p3-poseidon2 = { git = "https://github.com/wwared/Plonky3.git", branch = "sp1-v4" }

# p3-air = { path = "../Plonky3/air" }
# p3-field = { path = "../Plonky3/field"}
# p3-commit = { path = "../Plonky3/commit"}
# p3-matrix = { path = "../Plonky3/matrix"}
# p3-baby-bear = { path = "../Plonky3/baby-bear" }
# p3-util = { path = "../Plonky3/util"}
# p3-challenger = { path = "../Plonky3/challenger"}
# p3-mds = { path = "../Plonky3/mds"}
# p3-symmetric = { path = "../Plonky3/symmetric"}
# p3-uni-stark = { path = "../Plonky3/uni-stark"}
# p3-maybe-rayon = { path = "../Plonky3/maybe-rayon"}

# sp1-core-machine = { path = "../sp1/crates/core/machine"}
# sp1-core-executor = { path = "../sp1/crates/core/executor"}
# sp1-derive = { path = "../sp1/crates/derive"}
# sp1-stark = { path = "../sp1/crates/stark"}
# sp1-sdk = { path = "../sp1/crates/sdk"}
